[package]
name = "tiny_skia_display"
version = "0.1.2"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Implementation of embedded-graphics https://github.com/jamwaffles/embedded-graphics DrawTarget  based on tiny-skia https://github.com/RazrFalcon/tiny-skia."
repository = "https://github.com/morphUI/tiny-skia-display"
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = [
    "graphics",
    "canvas",
    "wasm"
]

[dependencies]
embedded-graphics-core = "0.2.0"
tiny-skia = "0.5.1"

[dev-dependencies]
orbclient = "0.3.31"
embedded-graphics = "0.7.0-alpha.3"